Fix word overflow problem

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -49,6 +49,7 @@
     margin-top: 10px;
     border: 3px dashed #8ebf42;
     background-color: #FFC0CB;
+    word-wrap: break-word;
 }
 
 .comment-img {
